Finished search section styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
   <div id ="top-bar">
 <span>TRAVEL TRAVEL TRAVEL </span>
   </div>
+
+<div id="search-section">
+  <input type ="text" />
+  <button> search</button> 
+   
+</div>
+
+
+
+
+ 
+
+
     <script src="./src/index.js"></script>
 </body>
 </html>
