--- a/index.html
+++ b/index.html
@@ -15,11 +15,42 @@
 <div id="search-section">
   <input type ="text" />
   <button> search</button> 
-   
 </div>
 
 
+<div id="images">
+  <div class="Image-1">
+    <h2>Eiffel tower ,Paris</h2>
+    <img src ="https://media.tacdn.com/media/attractions-splice-spp-674x446/07/03/1c/9c.jpg" alt="paris">
+    <div class="more-button"><button> learn more </button> </div>
+  </div>   
+  
+  <div id="Image-2">
+    <h2>Burj Khalifa ,Dubai </h2>
+    <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2Y2E7Fg0LTzJPa572UkZQCVODJPM481-l605Ac7lkog&s" alt="Dubai">
+    <div class="more-button"><button> learn more </button> </div>
+  </div>
 
+    <div id="Image-3">
+      <h2>Soneva Fush ,Maldives </h2>
+      <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvrnty7W00Co66HnosvP39tB2mnm2cYp1wViMB7oflcQ&s" alt="soneva Fush,Maldives">
+      <div class="more-button"><button> learn more </button> </div>
+    </div>
+      
+    <div id="Image-4">
+      <h2>Colosseum, Rome </h2>
+      <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjLgHB_8iWwTuOjJnpXvruYOgVzTX7fv9xgmxhlmOkGA&s" alt="Rome">
+      <div class="more-button"><button> learn more </button> </div>
+    </div>
+ 
+    <div id="Image-5">
+      <h2>Taj Mahal ,India </h2>
+      <img src ="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/Taj_Mahal_%28Edited%29.jpeg/250px-Taj_Mahal_%28Edited%29.jpeg" alt="India">
+      <div class="more-button"><button> learn more </button> </div>
+    </div>   
+  </div>
+
+<div id="h2"></div>
 
  
 
