--- a/index.html
+++ b/index.html
@@ -3,58 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href ="./css/css.css" rel="stylesheet"/>
-  <title>Travel Adisor</title>
+  <link href="./css/css.css" rel="stylesheet"/>
+  <title>Travel Advisor</title>
 </head>
 <body >
 
   <div id ="top-bar">
-<span>TRAVEL TRAVEL TRAVEL </span>
+<span>LIVE LOVE TRAVEL </span>
 </div>
-  
+
+  <div id="title">
+<h1>THE TOP 5</h1>
+</div>
 
 <div id="search-section">
-  <input type ="text" />
-  <button> search</button> 
-</div>
+  <input id="searchInput" type ="text"  placeholder="Enter a country"/>
+  
+  <button id="search-btn"> Search </button> <div id = "result"></div>
 
+</div>
 
 <div id="images">
   <div class="Image-1">
     <h2>Eiffel tower ,Paris</h2>
-    <img src ="https://media.tacdn.com/media/attractions-splice-spp-674x446/07/03/1c/9c.jpg" alt="paris">
+    <img src ="images.jpeg/paris.jpg" alt="paris">
     <div class="more-button"><button> learn more </button> </div>
   </div>   
   
   <div id="Image-2">
     <h2>Burj Khalifa ,Dubai </h2>
-    <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2Y2E7Fg0LTzJPa572UkZQCVODJPM481-l605Ac7lkog&s" alt="Dubai">
+    <img src ="images.jpeg/dubai.jpeg" alt="Dubai">
     <div class="more-button"><button> learn more </button> </div>
   </div>
 
     <div id="Image-3">
       <h2>Soneva Fush ,Maldives </h2>
-      <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvrnty7W00Co66HnosvP39tB2mnm2cYp1wViMB7oflcQ&s" alt="soneva Fush,Maldives">
+      <img src ="images.jpeg/Soneva Fushi, Maldives.jpeg" alt="Maldives">
       <div class="more-button"><button> learn more </button> </div>
     </div>
       
     <div id="Image-4">
       <h2>Colosseum, Rome </h2>
-      <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjLgHB_8iWwTuOjJnpXvruYOgVzTX7fv9xgmxhlmOkGA&s" alt="Rome">
+      <img src ="https://cdn.mos.cms.futurecdn.net/BiNbcY5fXy9Lra47jqHKGK.jpg" alt="Rome">
       <div class="more-button"><button> learn more </button> </div>
     </div>
  
     <div id="Image-5">
       <h2>Taj Mahal ,India </h2>
-      <img src ="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/Taj_Mahal_%28Edited%29.jpeg/250px-Taj_Mahal_%28Edited%29.jpeg" alt="India">
+      <img src ="images.jpeg/Taj Mahal India.jpeg" alt="India">
       <div class="more-button"><button> learn more </button> </div>
     </div>   
   </div>
 
 <div id="h2"></div>
-
- 
-
 
     <script src="./src/index.js"></script>
 </body>
