created a functional search bar , button and updated css styling

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,12 +18,12 @@
 </div>
 
 <div id="search-section">
-  <input id="searchInput" type ="text"  placeholder="Enter a country"/>
-  
-  <button id="search-btn"> Search </button> <div id = "result"></div>
+
+    <input id="searchInput" type ="text"  placeholder="Enter country iso code "/>
+  <button id="searchButton"> Search </button>
 
 </div>
-
+<div id="embed"></div>
 <div id="images">
   <div class="Image-1">
     <h2>Eiffel tower ,Paris</h2>
@@ -44,7 +45,7 @@
       
     <div id="Image-4">
       <h2>Colosseum, Rome </h2>
-      <img src ="https://cdn.mos.cms.futurecdn.net/BiNbcY5fXy9Lra47jqHKGK.jpg" alt="Rome">
+      <img src ="images.jpeg/colosseum,Rome.jpeg" alt="Rome">
       <div class="more-button"><button> learn more </button> </div>
     </div>
  
@@ -55,7 +56,16 @@
     </div>   
   </div>
 
-<div id="h2"></div>
+<div id="h2">
+  
+</div>
+
+
+<h2>
+
+</h2>
+  
+</div>
 
     <script src="./src/index.js"></script>
 </body>
