search results are now displaying perfectly on the webpage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div id="search-section">
 
-    <input id="searchInput" type ="text"  placeholder="Enter country iso code "/>
+    <input id="searchInput" type ="text"  placeholder="Search country "/>
   <button id="searchButton"> Search </button>
 
 </div>
