successfuly made functional learn buttons that when clicked allow the user to see additional information about the country

--- a/index.html
+++ b/index.html
@@ -23,50 +23,49 @@
   <button id="searchButton"> Search </button>
 
 </div>
+
 <div id="embed"></div>
 <div id="images">
   <div class="Image-1">
     <h2>Eiffel tower ,Paris</h2>
     <img src ="images.jpeg/paris.jpg" alt="paris">
-    <div class="more-button"><button> learn more </button> </div>
+    <div class="moreButton"><button> learn more </button> </div>
+    <p class="description">Paris, the City of Lights, is known for its romantic atmosphere, iconic landmarks like the Eiffel Tower and the Louvre Museum, and its delicious food scene.</p>
   </div>   
   
   <div id="Image-2">
     <h2>Burj Khalifa ,Dubai </h2>
     <img src ="images.jpeg/dubai.jpeg" alt="Dubai">
-    <div class="more-button"><button> learn more </button> </div>
+    <div class="moreButton"><button> learn more </button> </div>
+    <p class="description">Dubai, a city in the United Arab Emirates, is known for its luxury shopping, ultramodern architecture, and lively nightlife scene. Burj Khalifa, the world's tallest building, dominates the skyline.</p>
   </div>
 
     <div id="Image-3">
       <h2>Soneva Fush ,Maldives </h2>
       <img src ="images.jpeg/Soneva Fushi, Maldives.jpeg" alt="Maldives">
-      <div class="more-button"><button> learn more </button> </div>
+      <div class="moreButton"><button> learn more </button> </div>
+      <p class="description">The Maldives is a South Asian country in the Indian Ocean known for its many islands and beautiful beaches. Its luxurious resorts provide overwater bungalows and private beaches.</p>
     </div>
       
     <div id="Image-4">
       <h2>Colosseum, Rome </h2>
       <img src ="images.jpeg/colosseum,Rome.jpeg" alt="Rome">
-      <div class="more-button"><button> learn more </button> </div>
+      <div class="moreButton"><button> learn more </button> </div>
+      <p class="description">Rome, the "Eternal City", is a historic city in Italy, known for its ancient ruins, world-class museums, and delicious food. The Colosseum, a massive amphitheater, is a symbol of the Roman Empire.</p>
     </div>
  
     <div id="Image-5">
       <h2>Taj Mahal ,India </h2>
       <img src ="images.jpeg/Taj Mahal India.jpeg" alt="India">
-      <div class="more-button"><button> learn more </button> </div>
+      <div class="moreButton"><button> learn more </button> </div>
+      <p class="description">The Taj Mahal is an ivory-white marble mausoleum on the south bank of the Yamuna river in the Indian city of Agra. It was commissioned in 1632 by the Mughal emperor Shah Jahan (reigned 1628–1658) to house the tomb of his favourite wife Mumtaz Mahal; it also houses the tomb of Shah Jahan himself.</p>
     </div>   
   </div>
 
 <div id="h2">
+
   
-</div>
-
-
-<h2>
-
-</h2>
   
-</div>
-
     <script src="./src/index.js"></script>
 </body>
 </html>
