edited the top 5 country descriptions and made small styling edits

--- a/index.html
+++ b/index.html
@@ -27,45 +27,50 @@
 <div id="embed"></div>
 <div id="images">
   <div class="Image-1">
-    <h2>Eiffel tower ,Paris</h2>
+    <h2>Eiffel tower ,France</h2>
     <img src ="images.jpeg/paris.jpg" alt="paris">
     <div class="moreButton"><button> learn more </button> </div>
-    <p class="description">Paris, the City of Lights, is known for its romantic atmosphere, iconic landmarks like the Eiffel Tower and the Louvre Museum, and its delicious food scene.</p>
+    <p class="description">Steeped in history and romance, France offers iconic landmarks like the Eiffel Tower and Louvre Museum alongside charming cafes and picturesque lavender fields. Explore the French Alps, indulge in wine tastings in Bordeaux, or lose yourself in the vibrant culture of Paris, the land of fashion and perfume.</p>
   </div>   
   
   <div id="Image-2">
-    <h2>Burj Khalifa ,Dubai </h2>
+    <h2>Burj Khalifa ,UAE </h2>
     <img src ="images.jpeg/dubai.jpeg" alt="Dubai">
     <div class="moreButton"><button> learn more </button> </div>
-    <p class="description">Dubai, a city in the United Arab Emirates, is known for its luxury shopping, ultramodern architecture, and lively nightlife scene. Burj Khalifa, the world's tallest building, dominates the skyline.</p>
+    <p class="description">A land of contrasts, the UAE boasts architectural marvels like the Burj Khalifa in Dubai alongside traditional desert safaris with camel rides and Bedouin hospitality. Explore vibrant souks, experience the thrill of Ferrari World Abu Dhabi, or marvel at the Sheikh Zayed Grand Mosque's intricate beauty. This rapidly transforming nation is known for its luxurious lifestyle, cutting-edge architecture, and rich cultural heritage.</p>
   </div>
 
     <div id="Image-3">
       <h2>Soneva Fush ,Maldives </h2>
       <img src ="images.jpeg/Soneva Fushi, Maldives.jpeg" alt="Maldives">
       <div class="moreButton"><button> learn more </button> </div>
-      <p class="description">The Maldives is a South Asian country in the Indian Ocean known for its many islands and beautiful beaches. Its luxurious resorts provide overwater bungalows and private beaches.</p>
+      <p class="description">Bathe in luxury on pristine Maldivian beaches, swim in crystal-clear turquoise waters, or explore vibrant coral reefs teeming with marine life. Relax on an overwater bungalow, embark on a thrilling jet ski ride, or witness the magical bioluminescent glow of Mudhdhoo Island at night. This island paradise is famous for its luxurious resorts and breathtaking natural beauty.</p>
     </div>
       
     <div id="Image-4">
-      <h2>Colosseum, Rome </h2>
+      <h2>Colosseum ,Rome </h2>
       <img src ="images.jpeg/colosseum,Rome.jpeg" alt="Rome">
       <div class="moreButton"><button> learn more </button> </div>
-      <p class="description">Rome, the "Eternal City", is a historic city in Italy, known for its ancient ruins, world-class museums, and delicious food. The Colosseum, a massive amphitheater, is a symbol of the Roman Empire.</p>
+      <p class="description">History buffs will be enthralled by Rome's ancient ruins like the Colosseum and Roman Forum. Toss a coin in the Trevi Fountain, explore the Vatican City's wonders like St. Peter's Basilica, and indulge in delectable Italian cuisine. From fresh pasta and pizza to gelato, Rome offers a captivating blend of history, culture, and culinary delights.</p>
     </div>
  
     <div id="Image-5">
       <h2>Taj Mahal ,India </h2>
       <img src ="images.jpeg/Taj Mahal India.jpeg" alt="India">
       <div class="moreButton"><button> learn more </button> </div>
-      <p class="description">The Taj Mahal is an ivory-white marble mausoleum on the south bank of the Yamuna river in the Indian city of Agra. It was commissioned in 1632 by the Mughal emperor Shah Jahan (reigned 1628–1658) to house the tomb of his favourite wife Mumtaz Mahal; it also houses the tomb of Shah Jahan himself.</p>
+iv      <p class="description">A land of vibrant colors, spirituality, and diverse landscapes, India offers adventures for everyone. Hike the majestic Himalayas, explore the historical wonders of Agra Fort and Taj Mahal, or delve into the rich cultural tapestry of Varanasi. Savor flavorful curries, witness colorful festivals like Holi, and experience the warmth of Indian hospitality.</p>
     </div>   
   </div>
 
 <div id="h2">
 
-  
-  
+  <form id="ratingForm">
+    <label for="rating">Rating (1-5):</label>
+    <input type="number" id="rating" name="rating" min="1" max="5" required>
+    <button type="submit">Submit Rating</button>
+</form>
+
+
     <script src="./src/index.js"></script>
 </body>
 </html>
