--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </div>
 
   <div id="title">
-<h1>THE TOP 5</h1>
+<h1>THE TOP 5 <p>(updated daily)</p></h1>
+
 </div>
 
 <div id="search-section">
